--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
 :root {
     --color-bg: #1f1f38;
     --color-bg-variant: #2c2c6c;
     --color-primary: #4db5ff;
-    --color-primary-variant: rgba(77,181,255,0.4);
+    --color-primary-variant: rgba(77, 181, 255, 0.4);
     --color-white: #fff;
-    --color-light: rgba(255,255,255,0.6);
-
+    --color-light: rgba(255, 255, 255, 0.6);
     --container-width-lg: 75%;
     --container-width-md: 86%;
     --container-width-sm: 90%;
-
     --transition: all 400ms ease;
 }
 
@@ -25,15 +22,15 @@
     text-decoration: none;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     display: none;
 }
 
-body{
+body {
     font-family: 'Poppins', sans-serif;
     background: var(--color-bg);
     color: var(--color-white);
@@ -41,48 +38,53 @@ body{
     background-image: url("../src/assets/bg-texture.png");
 }
 
-.container{
+.container {
     width: var(--container-width-lg);
     margin: 0 auto;
 }
 
-h1, h2, h3, h4, h5{
+h1,
+h2,
+h3,
+h4,
+h5 {
     font-weight: 500;
 }
 
-h1{
+h1 {
     font-size: 2.5rem;
 }
 
-section{
+section {
     margin-top: 8rem;
     min-height: 100vh;
 }
 
-section > h2, section > h5{
+section>h2,
+section>h5 {
     text-align: center;
     color: var(--color-light);
 }
 
-section > h2{
+section>h2 {
     color: var(--color-primary);
     margin-bottom: 3rem;
 }
 
-.text-light{
+.text-light {
     color: var(--color-light);
 }
 
-a{
+a {
     color: var(--color-primary);
     transition: var(--transition);
 }
 
-a:hover{
+a:hover {
     color: var(--color-white);
 }
 
-.btn{
+.btn {
     width: max-content;
     display: inline-block;
     color: var(--color-primary);
@@ -91,41 +93,40 @@ a:hover{
     cursor: pointer;
     border: 1px solid var(--color-primary);
     transition: var(--transition);
+    z-index: 2;
 }
 
-.btn:hover{
+.btn:hover {
     background: var(--color-white);
     color: var(--color-bg);
     border-color: transparent;
 }
 
-.btn-primary{
+.btn-primary {
     background: var(--color-primary);
     color: var(--color-bg);
 }
 
-img{
+img {
     display: block;
     width: 100%;
     object-fit: cover;
 }
 
 @media screen and (max-width: 1024px) {
-    .container{
+    .container {
         width: var(--container-width-md);
     }
-
-    section{
+    section {
         margin-top: 6rem;
     }
 }
 
 @media screen and (max-width: 600px) {
-    .container{
+    .container {
         width: var(--container-width-sm);
     }
-
-    section > h2{
+    section>h2 {
         margin-bottom: 2rem;
     }
 }
